--- a/css/style.css
+++ b/css/style.css
@@ -25,16 +25,16 @@ Navbar CSS
   position: fixed!important;
   z-index: 5;
   top: 0em;
+  box-shadow: 0px 0px 5px #000;
 
-  display: none;
+  transition: .5s;
+  opacity: 0;
 }
 
 .navbar {
   margin-bottom: -1.4em!important;
   border-radius: 0px!important;
   border-bottom: none!important;
-
-  transition: .5s;
 }
 
 .navbar-right {
@@ -67,7 +67,25 @@ Parallax CSS
 -------------------*/
 .parallax {
     /* The image used */
-    background-image: url("http://melissachartan.com/wp-content/uploads/2014/07/Smiling-woman.jpg");
+    background:linear-gradient(0deg,rgba(255,255,255,0.7),rgba(255,255,255,0.7)),url(../img/parallaxImage.jpg);
+    background-size:cover;
+
+    /* Set a specific height */
+    height: 100vh;
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    margin-top: -1.4em;
+}
+
+.noParallaxOverlay {
+    /* The image used */
+    background:linear-gradient(0deg,rgba(255,255,255,0.2),rgba(255,255,255,0.0)),url(../img/parallaxImage.jpg);
+    background-size:cover;
 
     /* Set a specific height */
     height: 100vh;
@@ -89,13 +107,18 @@ Parallax CSS
   font-size: 5em;
   text-shadow: 0px 3px 10px #000;
   display: none;
+
+  padding-right: 23em;
 }
 
 .parallaxLogo {
-  position: relative;
-  top: 8em;
-  left: 10%;
-  display: none;
+  display: block;
+  margin: auto;
+  padding-top: 10em;
+  width: 250px;
+
+  -webkit-filter: drop-shadow(0px 5px 5px #222);
+  filter:         drop-shadow(0px 5px 5px #222);
 }
 
 .borderRadiusAnim {
@@ -171,15 +194,21 @@ Parallax CSS
 @media only screen and (max-width: 1280px) {
   	.animatedButton img {
     	  position: absolute;
-    	  left: 45%;
+    	  left: 44%;
+
+        width: 100px;
     }
 
     .parallaxContent h1{
-      position: relative;
-      left: 2em;
-      top: 6em;
-      font-size: 3em;
+    position: relative;
+    left: 2em;
+    top: 7em;
+    font-size: 2.3em;
     }
+}
+
+@media only screen and (max-width: 575px) {
+
 }
 /*-----------------
 About CSS
